--- a/module1/ss7_bien_va_toan_tu/bai_tap/UngDungChuyenDoiTienTeBai1.html
+++ b/module1/ss7_bien_va_toan_tu/bai_tap/UngDungChuyenDoiTienTeBai1.html
@@ -3,49 +3,53 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-    <style>
-        table {
-            width: 100%
-        }
-    </style>
+
 </head>
 <body>
-<table width="100%">
+<table>
     <tr>
-        <td> Amouint<br>
-            <input type="text" id="amount">
-        </td>
-        <td>
-            From Currency<br>
-            <select>
-                <option id="vietnam">Viet Nam</option>
-            </select>
-        </td>
-        <td>
-            To Currency<br>
-            <select>
-                <option id="sud">
-                    usd
-                </option>
-            </select>
-        </td>
-        <td>
-            <button type="submit" onclick="convert()">Convert</button>
-        </td>
+        <th>amount</th>
+        <th>from</th>
+        <th>to</th>
     </tr>
-
-</table>
-
-result:<input id="result">
-
+<tr>
+    <th><input type="text" id="nhapTien" placeholder="nhap so tien"></th>
+    <th>
+        <select id="from">
+            <option value="usd">usd</option>
+            <option value="vnd">viet nam</option>
+        </select>
+    </th>
+    <th>
+        <select id="to">
+            <option value="usd">usd</option>
+            <option value="vnd">viet nam</option>
+        </select>
+    </th>
+    <th>
+        <button type="button" onclick="doiTien()"> đổi</button>
+    </th>
+</tr>
 <script>
+    function doiTien(){
+        let nhapsotien = parseFloat(document.getElementById('nhapTien').value);
+        let from = parseFloat(document.getElementById('from').value);
+        let to = document.getElementById('to').value;
+        let result
+        if (from ==='usd'&& to ==='vnd'){
+            result = nhapsotien*23000;
+            document.write(result);
+            } else if (from=== 'vnd'&& to==='usd'){
+            result = nhapsotien/23000;
+            document.write(result)
+        }else  document.write('1')
 
-    function convert() {
-        let vietnam = parseInt(document.getElementById('amount').value);
-        let usd = vietnam / 23000;
 
-        document.getElementById('result').value = usd
+
     }
+
 </script>
+</table>
 </body>
 </html>
+
