--- a/module1/ss7_bien_va_toan_tu/bai_tap/UngDungMayTinhBai1.html
+++ b/module1/ss7_bien_va_toan_tu/bai_tap/UngDungMayTinhBai1.html
@@ -10,53 +10,54 @@
 </h1>
 
 
-
 <input id="number1" type="text" placeholder="nhap vao day">
 <input id="number2" type="text"><br>
 
-<button type="submit"onclick="convert()">Addition(+)</button>
-<button type="submit"onclick="subtraction()">subtraction(-)</button>
-<button type="submit"onclick="multiplication()">multiplication(*)</button>
-<button type="submit"onclick="division()">division(/)</button><br>
+<button type="submit" onclick="convert()">Addition(+)</button>
+<button type="submit" onclick="subtraction()">subtraction(-)</button>
+<button type="submit" onclick="multiplication()">multiplication(*)</button>
+<button type="submit" onclick="division()">division(/)</button>
+<br>
 
 result division<input id="result division">
 
 
-    <script>
-        function convert(){
-            let a=parseInt(document.getElementById("number1").value);
-            let b=parseInt(document.getElementById("number2").value);
-            let result =a+b;
+<script>
+    function convert() {
+        let a = parseInt(document.getElementById("number1").value);
+        let b = parseInt(document.getElementById("number2").value);
+        let result = a + b;
 
-document.getElementById('result division').value =result;
-}
-        function subtraction(){
-            let a=parseInt(document.getElementById("number1").value);
-            let b=parseInt(document.getElementById("number2").value);
+        document.getElementById('result division').value = result;
+    }
 
-            let result=a-b;
+    function subtraction() {
+        let a = parseInt(document.getElementById("number1").value);
+        let b = parseInt(document.getElementById("number2").value);
 
-            document.getElementById('result division').value =result;
-        }
+        let result = a - b;
 
-        function multiplication(){
-            let a=parseInt(document.getElementById("number1").value);
-            let b=parseInt(document.getElementById("number2").value);
+        document.getElementById('result division').value = result;
+    }
 
-            let result=a*b;
+    function multiplication() {
+        let a = parseInt(document.getElementById("number1").value);
+        let b = parseInt(document.getElementById("number2").value);
 
-            document.getElementById('result division').value =result;
-        }
+        let result = a * b;
 
-        function division(){
-            let a=parseInt(document.getElementById("number1").value);
-            let b=parseInt(document.getElementById("number2").value);
+        document.getElementById('result division').value = result;
+    }
 
-            let result=a/b;
+    function division() {
+        let a = parseInt(document.getElementById("number1").value);
+        let b = parseInt(document.getElementById("number2").value);
 
-            document.getElementById('result division').value =result;
-        }
-    </script>
+        let result = a / b;
+
+        document.getElementById('result division').value = result;
+    }
+</script>
 
 </form>
 </body>
