--- a/module1/ss10_cau_truc_lap_1/bai_tap/TimSoDauTienTrongDayFibonacChiaHerCho5.html
+++ b/module1/ss10_cau_truc_lap_1/bai_tap/TimSoDauTienTrongDayFibonacChiaHerCho5.html
@@ -5,6 +5,27 @@
     <title>Title</title>
 </head>
 <body>
+<script>
+    let n
+    let n1 = 0
+    let n2 = 1
+    let i
+    for (let i = 0; i < 5; i++) {
+        n = n1 + n2
+        n1 = n2
+        n2 = n
+        if (n % 5 === 0) {
+            document.write("so chia het cho 5 trong day la  " + n)
+            break
+
+        } else {
+            "khong phai laf so chia het cho 5 " + n
+        }
+
+
+    }
+
+</script>
 
 </body>
 </html>
