--- a/module1/ss10_cau_truc_lap_1/bai_tap/LuyenTapVongLap01Bai3.html
+++ b/module1/ss10_cau_truc_lap_1/bai_tap/LuyenTapVongLap01Bai3.html
@@ -5,22 +5,24 @@
     <title>Title</title>
 </head>
 <body>
-    <script>
-        let n3 =0;
-        let n1 = 0;
-        let n2 = 1;
-        document.write(n1);
-        document.write("<br>");
-        document.write(n2);
-        document.write("<br>");
-            let i;
-            for (i = 2, i < 20; i++;) {
-                n3 = (n1 + n2);
-                document.write(n3)
-                n1 = n2;
-                n2 = n3;
+<script>
+    let n3 = 0;
+    let n1 = 0;
+    let n2 = 1;
+    document.write(n1)
+    document.write("<br>")
+    document.write(n2)
+    document.write("<br>")
+    let i;
+    for (i = 2; i < 20; i++) {
 
-            }
+        n3 = (n1 + n2);
+
+        n1 = n2;
+        n2 = n3;
+        document.write(n3)
+        document.write("<br>")
+    }
 </script>
 
 
