--- a/module1/ss13_mang_2/bai_tap/bai_tap1_su_dung_cac_ham_co_san_cia_mang/Bai2ChenDauTruVao2So.html
+++ b/module1/ss13_mang_2/bai_tap/bai_tap1_su_dung_cac_ham_co_san_cia_mang/Bai2ChenDauTruVao2So.html
@@ -10,7 +10,7 @@
     let myarr = num.toString()//chuyen tu mang sang chuoi
     let result = [myarr[0]];
     for (let i = 0; i < myarr.length; i++) {
-        if (myarr[i - 1] % 2 === 0 && myarr[i] % 2 === 0) {// vi tri i vaf vi tri i-1 chia het cho 2
+        if (myarr[i - 1] % 2 === 0 && myarr[i] % 2 === 0 && myarr[i + 1] % 2 === 0) {// vi tri i vaf vi tri i-1 chia het cho 2
             // => vi tri truoc va sau deu chia het cho 2
             result.push("-", myarr[i]);//them phan tu - vao mang
         } else result.push(myarr[i])
