--- a/module1/ss13_mang_2/bai_tap/luyen_tap_mang_2/Bai5KiemTra2ChuoiCoGiongNhauKhong.html
+++ b/module1/ss13_mang_2/bai_tap/luyen_tap_mang_2/Bai5KiemTra2ChuoiCoGiongNhauKhong.html
@@ -14,8 +14,7 @@
             if (chuoi1[i] === chuoi2[j]) {
                 ketQua = "chuoi 1 =chuoi 2"
                 break;
-            }
-            ketQua = "chuoi 1 khac chuoi 2"
+            }else {ketQua = "chuoi 1 khac chuoi 2"}
         }
     }
     document.write(ketQua)
