--- a/module1/ss7_bien_va_toan_tu/bai_tap/UngDungChuyenDoiTienTeBai1.html
+++ b/module1/ss7_bien_va_toan_tu/bai_tap/UngDungChuyenDoiTienTeBai1.html
@@ -12,43 +12,42 @@
         <th>from</th>
         <th>to</th>
     </tr>
-<tr>
-    <th><input type="text" id="nhapTien" placeholder="nhap so tien"></th>
-    <th>
-        <select id="from">
-            <option value="usd">usd</option>
-            <option value="vnd">viet nam</option>
-        </select>
-    </th>
-    <th>
-        <select id="to">
-            <option value="usd">usd</option>
-            <option value="vnd">viet nam</option>
-        </select>
-    </th>
-    <th>
-        <button type="button" onclick="doiTien()"> đổi</button>
-    </th>
-</tr>
-<script>
-    function doiTien(){
-        let nhapsotien = parseFloat(document.getElementById('nhapTien').value);
-        let from = parseFloat(document.getElementById('from').value);
-        let to = document.getElementById('to').value;
-        let result
-        if (from ==='usd'&& to ==='vnd'){
-            result = nhapsotien*23000;
-            document.write(result);
-            } else if (from=== 'vnd'&& to==='usd'){
-            result = nhapsotien/23000;
-            document.write(result)
-        }else  document.write('1')
+    <tr>
+        <th><input type="text" id="nhapTien" placeholder="nhap so tien"></th>
+        <th>
+            <select id="from">
+                <option value="usd">usd</option>
+                <option value="vnd">viet nam</option>
+            </select>
+        </th>
+        <th>
+            <select id="to">
+                <option value="usd">usd</option>
+                <option value="vnd">viet nam</option>
+            </select>
+        </th>
+        <th>
+            <button type="button" onclick="doiTien()"> đổi</button>
+        </th>
+    </tr>
+
+    <script>
+        function doiTien() {
+            let nhapsotien = parseFloat(document.getElementById('nhapTien').value);
+            let from = document.getElementById('from').value;
+            let to = document.getElementById('to').value;
+            let result=0;
+            if (from === 'usd' && to === 'vnd') {
+                result = nhapsotien * 23000;
+                document.write(result);
+            } else if (from === 'vnd' && to === 'usd') {
+                result = nhapsotien / 23000;
+                document.write(result);
+            }
+        }
 
 
-
-    }
-
-</script>
+    </script>
 </table>
 </body>
 </html>
