--- a/module1/ss15_ham_02/bai_tap/luyen_tap_02/Bai6SoNguyenDuong.html
+++ b/module1/ss15_ham_02/bai_tap/luyen_tap_02/Bai6SoNguyenDuong.html
@@ -8,7 +8,7 @@
 
 <script>
     let flag = true
-    let a = prompt("nhap so ");
+    let a = parseFloat(prompt("nhap so "));
 
     function soNguyen(num) {
         for (let i = 0; i < num; i++) {
