--- a/module1/ss15_ham_02/bai_tap/Bai1KiemTraXemSoNguyenBatKiCoPhaiLaSoNguyenToHayKhong.html
+++ b/module1/ss15_ham_02/bai_tap/Bai1KiemTraXemSoNguyenBatKiCoPhaiLaSoNguyenToHayKhong.html
@@ -7,13 +7,11 @@
 <body>
 <script>
     let soNguyen = parseInt(prompt("Nhap so can kiem tra: "));
-    alert(isPrime(soNguyen));// gan soNguyen vao ham mang ten isprime()
-
+    let dem = 0;// so lan chia het cho 1 vaf chinh no se laf 2 lan:
     function isPrime(number) {
-        let dem = 0;// so lan chia het cho 1 vaf chinh no se laf 2 lan:
         for (let i = 1; i <= number; i++) {
             if (number % i === 0) {
-                dem++;
+                dem += 1;
             }
         }
         if (dem === 2) {//neu so lan chia het laf 2 lan thi do la so nguyen to
@@ -23,6 +21,8 @@
             // neu so lan chia het khac 2 lan thi do khong phai la so nguyen to
         }
     }
+
+    alert(isPrime(soNguyen));// gan soNguyen vao ham mang ten isprime()
 </script>
 </body>
 </html>
