--- a/module1/ss15_ham_02/bai_tap/luyen_tap_02/Bai9TraVeSoLanXuatHienCuaKiTu.html
+++ b/module1/ss15_ham_02/bai_tap/luyen_tap_02/Bai9TraVeSoLanXuatHienCuaKiTu.html
@@ -24,13 +24,14 @@
                     dem += 1
                 }
             }
-            return dem
+            return "so lan lap la"+dem
         } else {
             return -1
         }
     }
 
-    alert(kiemTra(arr, a))
+    let c=kiemTra(arr, a)
+    alert(c)
 
 
 </script>
