--- a/module1/ss16_lap_trinh_huong_doi_tuong/thuc_Hanh/Th1Xay DungLopDate.html
+++ b/module1/ss16_lap_trinh_huong_doi_tuong/thuc_Hanh/Th1Xay DungLopDate.html
@@ -41,12 +41,8 @@
     }
 
     let date = new Date(2, 3, 2007);
-    let day = date.getDay();
-    console.log(day);
-    let month = date.getMonth();
-    console.log(month);
-    let year = date.getYear();
-    console.log(year);
+    console.log(date)
+
     date.setDay(14);
     console.log(date.getDay());
     date.setMonth(2);
