--- a/module3/ss6_css _cascading_style_tylesheet/bai_tap/TaoTrangDocTruyenNgan.html
+++ b/module3/ss6_css _cascading_style_tylesheet/bai_tap/TaoTrangDocTruyenNgan.html
@@ -8,7 +8,7 @@
     <style type="text/css">
 
 html{
-    background-color: black;
+    background-color: honeydew;
 }
         header {
             position: static;
