--- a/module3/ss7_thiet_ke_bo_cuc_trang_web/luyen_tap/BoCucCoBan.html
+++ b/module3/ss7_thiet_ke_bo_cuc_trang_web/luyen_tap/BoCucCoBan.html
@@ -55,7 +55,7 @@
         }
 
         #right{
-            width: 30%;
+            width: 28%;
             min-height: 400px;
             border: 1px solid red;
             float:right;
@@ -70,6 +70,13 @@
         }
         *{
             box-sizing: border-box;
+        }
+        div.message-box {
+            width: 220px;
+            padding: 10px;
+            border: 1px solid gray;
+            margin-left: 10px;
+            margin-top: 20px;
         }
     </style>
 </head>
@@ -88,9 +95,15 @@
     </div>
 
     <div id="right">
+        rite
+
     </div>
 
     <div id="footer">
+    </div>
+    <div class="message-box">
+        á
+
     </div>
 </div>
 </body>
