--- a/module4 /ss12_jquery_ajax/bai_tap/bai1_mo_rong_blog/ss_12_front_end_mo_rong_blog/List_Blog.html
+++ b/module4 /ss12_jquery_ajax/bai_tap/bai1_mo_rong_blog/ss_12_front_end_mo_rong_blog/List_Blog.html
@@ -18,14 +18,15 @@
         <div class="col-lg-2">
             <button class="btn btn-primary bg-momo" id="btnSearch">Search</button>
         </div>
+        <div class="col-lg-2">
+            <a href="http://localhost:63343/ss_12_front_end_mo_rong_blog/create.html?_ijt=bqqsjl1mm2t4gcknruook6k4b3&_ij_reload=RELOAD_ON_SAVE">
+                <button class="btn btn-success">create</button>
+            </a>
+
+        </div>
 
     </div>
-    <div class="row w-50 mx-auto">
-        <a href="http://localhost:63343/front_end/create.html?_ijt=5inbtd1lv029aisp4mim7k13lv&_ij_reload=RELOAD_ON_SAVE">
-            <button>create</button>
-        </a>
-
-    </div>
+<!-- list blog-->
     <div class="row w-50 mx-auto">
 
         <div class="col-lg-12">
@@ -38,18 +39,19 @@
                     <th scope="col">nameBlog</th>
                     <th scope="col">content</th>
                     <th scope="col">Blogger</th>
-                    <th scope="col">edit</th>
+                    <th scope="col">Delete</th>
                 </tr>
                 </thead>
 
                 <tbody id="bodyBlog">
-
                 </tbody>
 
             </table>
 
         </div>
     </div>
+
+<!--phân trang-->
     <nav aria-label="..." class="d-flex justify-content-center">
         <ul class="pagination">
             <li class="page-item">
@@ -63,6 +65,44 @@
             </li>
         </ul>
     </nav>
+    <!-- Button trigger modal -->
+    <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
+        Launch demo modal
+    </button>
+
+    <!-- Modal -->
+    <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    ...
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                    <button type="button" class="btn btn-primary">Save changes</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
+<!--         <div class="modal-body">
+                    <input type="hidden" class="form-control" id="idEdit" value="${pageSmartphone.content[i].id}">
+                    <label for="model" class="form-label">Model</label>
+                    <input type="text" class="form-control" id="modelEdit" value="${pageSmartphone.content[i].model}">
+                    <label for="price" class="form-label">Price</label>
+                    <input type="text" class="form-control" id="priceEdit" value="${pageSmartphone.content[i].price}">
+                    <label for="producer" class="form-label">Producer</label>
+                    <input type="text" class="form-control" id="producerEdit" value="${pageSmartphone.content[i].producer}">
+                </div>
+                <div class="modal-footer">
+                    <a href="${pageSmartphone.content[i].id}" class="btn btn-outline-success" id="btnEdit" data-bs-dismiss="modal">Success</a>
+                    <button type="button" class="btn btn-outline-secondary" data-bs-dismiss="modal">Close</button>
+                </div>-->
+
 
 </div>
 <script src="js/jquery-3.6.0.min.js"></script>
@@ -85,19 +125,21 @@
 <td> ${blogPage.content[i].nameBlog}</td>
 <td> ${blogPage.content[i].content}</td>
 <td> ${blogPage.content[i].blogger.nameBlogger}</td>
-
 <td><a href="${blogPage.content[i].id}" id="btnDelete">delete</a></td>
+<td><a href="${blogPage.content[i].id}" id="btnUpdate">Update</a></td>
 
-</tr>`}
+
+</tr>`
+                }
+
                 $("#bodyBlog").html(blogBodyHTML);
             },
             error: function (resultError) {
-               console.log("danh sách không được trống")
+                console.log("danh sách không được trống")
             }
 
         })
     }
-
 
 
     getPageBlog(0, "");
@@ -116,16 +158,14 @@
         getPageBlog(pageCur, "");
     })
 
+
     $("#btnSearch").click(function () {
         let keyword = $("#keyword").val();
         getPageBlog(0, keyword)
     })
 
 
-
-
-
-    $(document).ready(function (){
+    $(document).ready(function () {
         $("#bodyBlog").on("click", "#btnDelete", function (event) {
             let id = $(this).attr("href");
             console.log(id)
@@ -135,7 +175,7 @@
                     'Content-Type': 'application/json'
                 },
                 type: "DELETE",
-                url: "http://localhost:8080/blog_restful/" + id ,
+                url: "http://localhost:8080/blog_restful/" + id,
                 success: function () {
                     $(this).parent().parent().remove();
                     getPageBlog(0, "");
