--- a/module4 /ss12_jquery_ajax/bai_tap/bai2_mo_rong_ung_dung_dien_thoai/front_end_mo_rong_quan_li_dien_thoai/create.html
+++ b/module4 /ss12_jquery_ajax/bai_tap/bai2_mo_rong_ung_dung_dien_thoai/front_end_mo_rong_quan_li_dien_thoai/create.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Create student momo</title>
+    <title>Create smartPhone</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
@@ -42,29 +42,34 @@
                 </div>
 
 
-                <a href="http://localhost:63343/mo_rong_quan_li_dien_thoai/smartPhone_list.html?_ijt=sve4h8p6c3r3cpd9m9l9lhdaui&_ij_reload=RELOAD_ON_SAVE">
+                <a href="http://localhost:63343/front_end_mo_rong_quan_li_dien_thoai/smartPhone_list.html?_ijt=o48prp5hf39k4rrt0d5bmijo79&_ij_reload=RELOAD_ON_SAVE">
                     <button id="btnCreate" type="button" class="btn btn-primary btn-block bg-momo">
                         Create
                     </button>
                 </a>
-
+                <a href="http://localhost:63343/front_end_mo_rong_quan_li_dien_thoai/smartPhone_list.html?_ijt=o48prp5hf39k4rrt0d5bmijo79&_ij_reload=RELOAD_ON_SAVE">
+                    <button type="button" class="btn btn-primary btn-block bg-momo">
+                        Back To List
+                    </button>
+                </a>
             </div>
         </div>
     </div>
 
     <script src="js/jquery-3.6.0.min.js"></script>
+
     <script>
         $("#btnCreate").click(function () {
-            let producer1 = $("#inputProducer").val();
-            let model1 = $("#inputModel").val();
-            let price1 = $("#inputPrice").val();
+            let producer = $("#inputProducer").val();
+            let model = $("#inputModel").val();
+            let price = $("#inputPrice").val();
 
-            console.log(producer1 + " " + model1 + " " + price1);
+            console.log(producer + " " + model + " " + price);
 
             let smartPhoneObject = {
-                producer: producer1,
-                model: model1,
-                price:price1
+                producer: producer,
+                model: model,
+                price:price
             }
             $.ajax({
                 headers: {
