--- a/module4 /ss12_jquery_ajax/bai_tap/bai2_mo_rong_ung_dung_dien_thoai/front_end_mo_rong_quan_li_dien_thoai/smartPhone_list.html
+++ b/module4 /ss12_jquery_ajax/bai_tap/bai2_mo_rong_ung_dung_dien_thoai/front_end_mo_rong_quan_li_dien_thoai/smartPhone_list.html
@@ -4,13 +4,18 @@
     <meta charset="UTF-8">
     <title>Title</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
     <style>
         #menu {
             width: 100%;
             height: 800px;
             background: url("https://asiky.com/files/images/Article/asiky-website-khach-san/chiem-nguong-ve-dep-cua-khach-san-7-sao.jpg")
+        }
+
+        .form-label {
+            color: red;
         }
     </style>
 </head>
@@ -21,42 +26,47 @@
 
     <div class="container" style="width: 100%">
         <div>
-            <a href="http://localhost:63343/mo_rong_quan_li_dien_thoai/create.html?_ijt=9nltiqv5ub0htrq5msdic99n8r&_ij_reload=RELOAD_ON_SAVE">
-                <button  class="btn btn-success ">CREATE</button>
+            <a href="http://localhost:63343/front_end_mo_rong_quan_li_dien_thoai/create.html?_ijt=6fr62kts02alipg7eailue2ils&_ij_reload=RELOAD_ON_SAVE">
+                <button class="btn btn-success ">CREATE</button>
             </a>
         </div>
         <div>
             <nav id="nav" class="navbar navbar-light">
 
-                <form class="d-flex">
-                    <input class="form-control" type="text" id="keyword">
-                    <button class="btn btn-success " id="btnSearch">Search</button>
-                </form>
+                <div class="row w-50 mx-auto">
+                    <div class="col-lg-10">
+                        <input class="form-control" type="text" id="keyword">
+                    </div>
+                    <div class="col-lg-2">
+                        <button class="btn btn-success" id="btnSearch">Search</button>
+                    </div>
+                </div>
             </nav>
         </div>
 
     </div>
 
-<div class="container">
-    <table id="tableStudent" class="table table-dark table-borderless" style="width: 100%">
+    <div class="container">
+        <table id="tableStudent" class="table table-dark table-borderless" style="width: 100%">
 
-        <thead>
-        <tr>
+            <thead>
+            <tr>
 
-            <td >id Smartphone</td>
-            <td >producer</td>
-            <td >model</td>
-            <td >price</td>
-            <td>delete</td>
+                <td>id Smartphone</td>
+                <td>producer</td>
+                <td>model</td>
+                <td>price</td>
+                <td>edit</td>
+                <td>delete</td>
 
-        </tr>
-        </thead>
-        <tbody id="bodyBlog">
+            </tr>
+            </thead>
+            <tbody id="bodySmartPhone">
 
-        </tbody>
-    </table>
+            </tbody>
+        </table>
 
-</div>
+    </div>
 
     <nav aria-label="..." class="d-flex justify-content-center">
         <ul class="pagination">
@@ -73,7 +83,6 @@
     </nav>
 </div>
 
-</body>
 
 <script src="js/jquery-3.6.0.min.js"></script>
 <script>
@@ -85,20 +94,80 @@
             },
             type: "GET",
             url: "http://localhost:8080/smartphones/phoneList?page=" + pageNumber + "&keyword=" + keyword,
-
             success: function (smartphonePage) {
-                let blogBodyHTML = "";
+                let smartPhoneBodyHTML = "";
                 for (let i = 0; i < smartphonePage.content.length; i++) {
-                    blogBodyHTML += `<tr>
-    <td> ${smartphonePage.content[i].id}</td>
-    <td> ${smartphonePage.content[i].producer}</td>
-    <td> ${smartphonePage.content[i].model}</td>
-    <td> ${smartphonePage.content[i].price}</td>
+                    smartPhoneBodyHTML += `<tr>
+                                        <td> ${smartphonePage.content[i].id}</td>
+                                        <td> ${smartphonePage.content[i].producer}</td>
+                                        <td> ${smartphonePage.content[i].model}</td>
+                                        <td> ${smartphonePage.content[i].price}</td>
 
-    <td><a href="${smartphonePage.content[i].id}" id="btnDelete">delete</a></td>
+        <td>
+        <!-- Button trigger modal -->
+        <button type="button" class="btn btn-success" data-bs-toggle="modal" data-bs-target="#exampleModalEdit${smartphonePage.content[i].id}">
+          Edit
+        </button>
+        <!-- Modal -->
+        <div class="modal fade" id="exampleModalEdit${smartphonePage.content[i].id}" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+          <div class="modal-dialog">
+            <div class="modal-content">
+              <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLabel">Edit Product</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+              </div>
+                <div class="modal-body">
 
-</tr>`}
-                $("#bodyBlog").html(blogBodyHTML);
+                    <input type="hidden" class="form-control" id="idEdit" value="${smartphonePage.content[i].id}">
+                    <label for="producer" class="form-label">Producer</label>
+                    <input type="text" class="form-control" id="producerEdit" value="${smartphonePage.content[i].producer}">
+                    <label for="model" class="form-label">Model</label>
+                    <input type="text" class="form-control" id="modelEdit" value="${smartphonePage.content[i].model}">
+                    <label for="price" class="form-label">Price</label>
+                    <input type="text" class="form-control" id="priceEdit" value="${smartphonePage.content[i].price}">
+
+                </div>
+                <div class="modal-footer">
+                    <a href="${smartphonePage.content[i].id}" class="btn btn-outline-success" id="btnEdit" data-bs-dismiss="modal">Success</a>
+                    <button type="button" class="btn btn-outline-secondary" data-bs-dismiss="modal">Close</button>
+                </div>
+            </div>
+          </div>
+        </div>
+        </td>
+<!--        ----------------------------------------------------------------------------------------------------   -->
+
+      <td>
+     <button type="button" class="btn btn-success" data-bs-toggle="modal" data-bs-target="#exampleModalCreate${smartphonePage.content[i].id}">
+       Delete
+      </button>
+        <!-- Modal -->
+      <div class="modal fade" id="exampleModalCreate${smartphonePage.content[i].id}" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+      <div class="modal-dialog">
+      <div class="modal-content">
+       <div class="modal-header">
+       <h5 class="modal-title text-warning" id="exampleModalCreate">Delete SmartPhones</h5>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+          </div>
+
+          <div class="modal-body " >
+          <p>bạn có muốn xóa  ${smartphonePage.content[i].model} với id = ${smartphonePage.content[i].id}</p>
+          </div>
+
+          <div class="modal-footer">
+           <a href="${smartphonePage.content[i].id}" class="btn btn-outline-success" id="btnDelete" data-bs-dismiss="modal">Delete</a>
+            <button type="button" class="btn btn-outline-secondary" data-bs-dismiss="modal">Close</button>
+            </div>
+            </div>
+            </div>
+             </div>
+               </td>
+
+
+                                        </tr>`;
+                }
+
+                $("#bodySmartPhone").html(smartPhoneBodyHTML);
             },
             error: function (resultError) {
                 console.log("danh sách không được trống")
@@ -106,6 +175,7 @@
 
         })
     }
+
     getPageSmartphones(0, "");
     let pageCur = 0;
     $("#aPrevious").click(function () {
@@ -126,8 +196,67 @@
         let keyword = $("#keyword").val();
         getPageSmartphones(0, keyword)
     })
+
+    $(document).ready(function () {
+        $("#bodySmartPhone").on('click', '#btnEdit', function (event) {
+            let idEdit = $(this).attr("href");
+            event.preventDefault();
+            let modelE = $("#exampleModalEdit" + idEdit + " #modelEdit").val();
+            let priceE = $("#exampleModalEdit" + idEdit + " #priceEdit").val();
+            let producerE = $("#exampleModalEdit" + idEdit + " #producerEdit").val();
+
+            let smartphone = {
+                id: idEdit,
+                model: modelE,
+                price: priceE,
+                producer: producerE
+            }
+            $.ajax({
+                headers: {
+                    'Accept': 'application/json',
+                    'Content-Type': 'application/json'
+                },
+                type: "POST", //GET, DELETE, PUT...
+                url: "http://localhost:8080/smartphones/update",
+                data: JSON.stringify(smartphone),
+                success: function (resultSuccess) {
+                    getPageSmartphones(pageCur, "");
+                },
+                error: function (resultError) {
+                    console.log(resultError)
+                }
+            });
+        })
+
+    })
+
+    $(document).ready(function () {
+        $("#bodySmartPhone").on("click", "#btnDelete", function (event) {
+            let idDelete = $(this).attr("href");
+            console.log(idDelete)
+            $.ajax({
+                headers: {
+                    'Accept': 'application/json',
+                    'Content-Type': 'application/json'
+                },
+                type: "DELETE",
+                url: "http://localhost:8080/smartphones/" + idDelete,
+                success: function () {
+                    $(this).parent().parent().remove();
+                    getPageSmartphones(pageCur, "");
+                },
+                error: function (resultError) {
+                    console.log("có lỗi đã xảy ra" + resultError)
+                }
+
+            })
+            event.preventDefault();
+
+        })
+    });
 </script>
-
-
+</body>
 </html>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+        crossorigin="anonymous"></script>
